# CPlusPlus-SDL-Game

./: .gitmodules  CMakeLists.txt
SDL-Engine/: CMakeLists.txt
SDL-Engine/include/Application/: Application.h
SDL-Engine/include/Assets/Components/: Renderer2D.h  Transform.h
SDL-Engine/include/Core/: EngineSystems.h
SDL-Engine/include/Core/ECS/: ECSManager.h
SDL-Engine/include/Core/ECS/Systems/: RenderingSystem.h
SDL-Engine/src/Application/: Application.cpp
SDL-Engine/src/Core/ECS/: ECSManager.cpp
SDL-Engine/src/Core/ECS/Systems/: RenderingSystem.cpp
include/: EmptyApp.h
include/Assets/GameObjects/: TestGameObject.h
src/: EmptyApp.cpp
src/Assets/GameObjects/: TestGameObject.cpp
